--- a/css/_price.scss
+++ b/css/_price.scss
@@ -75,6 +75,7 @@ html {
   margin-bottom: 50px;
   font-weight: 800; }
 .title-price h2 {
+  font-weight: 800;
   margin: 0; }
 @media (max-width: 1023px) {
   .title-price {
